[package]
name = "horst"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[dependencies]
lazy_static = "1.4.0"
reqwest = { version = "0.11.16", features = ["blocking"] }

[net]
net.git-fetch-with-cli = true